--- a/.github/workflows/bandit.yml
+++ b/.github/workflows/bandit.yml
@@ -14,11 +14,11 @@ name: Bandit
 on:
   push:
     branches: [ "main" ]
-    paths: **.py
+    paths: [ "**.py" ]
   pull_request:
     # The branches below must be a subset of the branches above
     branches: [ "main" ]
-    paths: **.py
+    paths: [ "**.py" ]
   schedule:
     - cron: '40 5 * * 2'
 
